completed landing page with dropdown

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1054,7 +1054,7 @@
               <!--radio buttons end-->
               <!--slide images start-->
               <div class="slide first"  onclick="location.href='prodPage.html'">
-                <img src="images/home page/top -carousel (1).jpg" alt="">
+                <img src="images/home page/top -carousel (1).gif" alt="">
               </div>
               <div class="slide"  onclick="location.href='prodPage.html'">
                 <img src="images/home page/top -carousel (2).jpg" alt="">
@@ -1063,7 +1063,7 @@
                 <img src="images/home page/top -carousel (3).jpg" alt="">
               </div>
               <div class="slide"  onclick="location.href='prodPage.html'">
-                <img src="images/home page/top -carousel (4).jpg" alt="">
+                <img src="images/home page/top -carousel (4).gif" alt="">
               </div>
             </div>
           </div>
@@ -1417,7 +1417,7 @@
                            <!-- Footer ends  -->
               
           <!-- Custom Javascript file -->
-          <script src="Script/main.js"></script>
+          <script src="Script/index.js"></script>
       </body>
       </html>
 
