--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <title>NEXA CLiQ</title>
     <link rel="icon" href="cart/unnamed.png" type="png">
     <link rel="stylesheet" href="CSS/style.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body>
     <!-- --------- Nav Bar starts ------------------->
@@ -952,7 +953,7 @@
                 <img src="images/home page/whistlistt.svg" alt="">
               </div>
               <div class="cart" >
-                <a href="cart/cart.html">
+                <a href="cart.html">
                   <span class="numb">0</span>
                 <img src="images/home page/cart icon.svg" alt="" style="width: 20px;">
                 </a>
@@ -987,9 +988,9 @@
                     <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                   </div>
                   <span>or use your email for registration</span>
-                  <input id="name" name="name" type="text" placeholder="Name" />
-                  <input id="mail" name="mail" type="email" placeholder="Email" />
-                  <input id="pass" name="pass" type="password" placeholder="Password" />
+                  <input id="name" name="name" type="text" placeholder="Name" required/>
+                  <input id="mail" name="mail" type="email" placeholder="Email" required/>
+                  <input id="pass" name="pass" type="password" placeholder="Password" required/>
                   <button id="sign-up" onclick="register(event)">Sign Up</button>
                 </form>
               </div>
@@ -1003,8 +1004,8 @@
                     <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                   </div>
                   <span>or use your account</span>
-                  <input id="email" name="email" type="email" placeholder="Email" />
-                  <input id="passw" name="passw" type="password" placeholder="Password" />
+                  <input id="email" name="email" type="email" placeholder="Email" required/>
+                  <input id="passw" name="passw" type="password" placeholder="Password" required/>
                   <a href="#">Forgot your password?</a>
                   <button onclick="login(event)">Sign In</button>
                 </form>
@@ -1408,7 +1409,7 @@
               <h2>Online Shopping: Fast & convenient with the click of a button</h2>
               <p>The upside of online shopping at NEXA CLiQ online store, is that you'll save on time and most importantly money with NexaCliq offers. It's as simple as comparing products and prices online before making the right buy. What's more, you also have the option to pay for your favourite brands and products using our easy EMI options. Of course, you can buy and try - in the convenience of your home. Returns are easy too: We'll pick up your returns for free or you can also drop off the goods at the nearest brand store.</p>
               <h2>Nexa CLiQ Shopping App: Everything you want with just a few clicks on Android & iOS</h2>
-              <p>Shopping on the Nexa CLiQ App is an absolute delight. Download the <a href="#">Nexa CLiQ Android app</a> from the Play Store or the <a href="#">iOS App</a> from Apple App Store and get set to enjoy a range of benefits. Apart from the best deals, amazing offers and the latest styles online, the app also gives you the flexibility to shop at your convenience. Shop during a commute, in the middle of a holiday or at any time you want to. You can also use the easy share options to share your shopping with your friends and family to ensure you're buying something that's perfect. With constant updates and a host of new features being introduced constantly, you also get to enjoy a shopping experience that you'll absolutely love. Download the Tata CLiQ App today and prepare to rediscover the way you shop.</p>
+              <p>Shopping on the Nexa CLiQ App is an absolute delight. Download the <a href="#">Nexa CLiQ Android app</a> from the Play Store or the <a href="#">iOS App</a> from Apple App Store and get set to enjoy a range of benefits. Apart from the best deals, amazing offers and the latest styles online, the app also gives you the flexibility to shop at your convenience. Shop during a commute, in the middle of a holiday or at any time you want to. You can also use the easy share options to share your shopping with your friends and family to ensure you're buying something that's perfect. With constant updates and a host of new features being introduced constantly, you also get to enjoy a shopping experience that you'll absolutely love. Download the Nexa CLiQ App today and prepare to rediscover the way you shop.</p>
               <h2>NEXA CLiQ: Most genuine place for Electronics and Lifestyle Online Shopping, with India's most trusted destination. Buy Brands you love at prices you want!</h2>
               <p>Shopping for your Lifestyle needs will be made delightfult with NEXA CLiQ. With exclusive Brand store for <a href="#">Westside Online</a> we have most of your trndy shopping needs taken care of. Make NEXA CliQ your online clothes shopping destination and get the best deals on your favorite brands, with the 100% genuine products. Be it gold coins or mobile phones online, you can count on NEXA CliQ for receiving only the most authentic products. Upgrade your lifestyle with shoes online shopping and online clothes shopping only at NEXA CLiQ. Online Shopping for men has never been more easy! Men like to choose Brands and keep their wardrobe upto date with the latest trends. NEXA CLiQ has made the Online shopping expirience amazing for Men. Women's Lifetyle Online shopping needs have been taken care of as well, with the larget assortment of womenwear online</p>
             </div>
